# Deep-Learning-Based-Recognition-and-Interpretation-of-Pakistani-Sign-Language-PSL-

./: .gitignore  README.md  count_dataset.py  diagnostics.py  infer_from_train.py  infer_inception_webcam.py  infer_lstm_video.py  infer_vgg_classifier_webcam.py  pyproject.toml  test.py  test_file.py
dataloader/: dataloader.py
models/: extract_features.py  lstm.py  train_lstm.py  vgg.py
